Fix the destroy function path
